<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/scrollview"
        android:elevation="5dp">
        <LinearLayout
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/report_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="30sp"
                android:textColor="@color/colorStart"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:padding="5dp"
                android:gravity="center"
                android:layout_marginStart="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_steps"
                    android:textColor="@color/colorStart"
                    android:textSize="20sp"
                    android:textStyle="italic">

                </TextView>

                <TextView
                    android:id="@+id/report_steps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="125dp"
                    android:textColor="@color/colorStart"
                    android:textSize="20sp"
                    android:textStyle="bold">

                </TextView>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_marginStart="10dp"
                android:padding="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distance_in_kilometers"
                    android:textColor="@color/colorStart"
                    android:textSize="20sp"
                    android:textStyle="italic">

                </TextView>

                <TextView
                    android:textColor="@color/colorStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:id="@+id/report_km"
                    android:textSize="20sp"
                    android:textStyle="bold">

                </TextView>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:padding="5dp"
                android:layout_marginStart="10dp"

                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/burned_calories"
                    android:textColor="@color/colorStart"
                    android:textSize="20sp"
                    android:textStyle="italic">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="89dp"
                    android:id="@+id/report_calories"
                    android:textColor="@color/colorStart"
                    android:textSize="20sp"
                    android:textStyle="bold">

                </TextView>

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>