<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrayLight"
    android:orientation="vertical"
    tools:context=".ProfileActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/profile_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/profile_toolbar"
            layout="@layout/toolbar"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="161dp"/>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="450dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:background="@drawable/gardientbackground"
            android:orientation="vertical"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="300dp"
                android:layout_height="250dp"
                android:layout_gravity="center_horizontal"
                android:elevation="5dp"
                android:layout_marginTop="35dp"
                android:src="@drawable/ic_person"
                app:civ_border_color="@color/colorStart"
                app:civ_border_width="5dp" />
            <TextView
                android:layout_gravity="center_horizontal"
                android:id="@+id/profile_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:textStyle="bold"
                android:textSize="21sp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/profile_username"/>

        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="350dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="3"
                >
                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textSize="20sp"
                        />
                    <TextView
                        android:id="@+id/profile_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:paddingTop="10dp"
                        android:textColor="@color/colorStart"/>
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">
        <LinearLayout
            android:orientation="horizontal"
            android:paddingLeft="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/height_cm"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:id="@+id/profile_weight">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"
                android:text="180"
                android:paddingStart="20dp"
                android:textSize="16sp"
                android:enabled="false"
                >

            </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/weight_kg"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:id="@+id/profile_height">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:text="80"
                    android:paddingStart="10dp"
                    android:textSize="16sp"
                    android:enabled="false"
                    >

                </com.google.android.material.textfield.TextInputEditText>


            </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>


            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:text="Gender"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:id="@+id/profile_gender">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_height="wrap_content"
                        android:text="Male"
                        android:paddingStart="10dp"
                        android:textSize="16sp"
                        android:enabled="false"
                        >

                    </com.google.android.material.textfield.TextInputEditText>


                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>




    <Button
        android:textColor="#fff"
        android:id="@+id/profile_editButton"
        android:background="@drawable/buttonstylegardient"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/edit"/>


</LinearLayout>